[gd_scene load_steps=12 format=2]

[ext_resource path="res://Escenas/Jugador.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Generador.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenas/Main.gd" type="Script" id=3]
[ext_resource path="res://Escenas/pared.gd" type="Script" id=4]
[ext_resource path="res://Codigo-binario.jpg" type="Texture" id=5]
[ext_resource path="res://Sprites/Linebeam.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://musica/Gwyn Lord of Cinder  Dark Souls Soundtrack.mp3" type="AudioStream" id=7]
[ext_resource path="res://Escenas/MusicaDeFondo1.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 257.5, 18 )

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="Codigo-binario" type="Sprite" parent="."]
position = Vector2( 362, 362 )
scale = Vector2( 1, 1.34945 )
texture = ExtResource( 5 )

[node name="Jugador" parent="." groups=["Jugador"] instance=ExtResource( 1 )]

[node name="Generador" parent="." instance=ExtResource( 2 )]

[node name="titulo" type="RichTextLabel" parent="."]
margin_left = 11.0
margin_top = 13.0
margin_right = 187.0
margin_bottom = 57.0
custom_colors/default_color = Color( 0.192157, 0.835294, 0.184314, 1 )
custom_colors/font_color_selected = Color( 0.0941176, 0.686275, 0.133333, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "Puntaje:"
text = "Puntaje:"

[node name="puntaje" type="RichTextLabel" parent="."]
margin_left = 179.0
margin_top = 16.0
margin_right = 308.0
margin_bottom = 56.0
custom_colors/default_color = Color( 0.435294, 0.894118, 0.305882, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "0"

[node name="pared" type="KinematicBody2D" parent="." groups=["pared"]]
position = Vector2( 256, 725 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pared"]
shape = SubResource( 1 )

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 7 )

[connection signal="SM1" from="Jugador" to="." method="_on_Jugador_SM1"]
[connection signal="SM2" from="Jugador" to="." method="_on_Jugador_SM2"]
[connection signal="SM3" from="Jugador" to="." method="_on_Jugador_SM3"]
[connection signal="RM1" from="pared" to="." method="_on_pared_RM1"]
[connection signal="RM2" from="pared" to="." method="_on_pared_RM2"]
[connection signal="RM3" from="pared" to="." method="_on_pared_RM3"]
